<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.GameFragment"
    android:background="@color/main">

    <TextView
        android:id="@+id/game_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/game_timer"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/game_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/game_sum"
        android:text="@string/game_sum"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_timer" />

    <TextView
        android:id="@+id/game_num1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="8dp"
        android:background="@color/game_number"
        android:gravity="center"
        android:text="@string/game_num1"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_sum" />

    <TextView
        android:id="@+id/game_num2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:background="@color/game_number"
        android:gravity="center"
        android:text="@string/game_num2"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_sum" />

    <TextView
        android:id="@+id/game_answers_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/game_answers_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_num1" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_answers_progress" />

    <LinearLayout
        android:id="@+id/game_btn_line1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar">

        <Button
            android:id="@+id/game_btn1"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="#cf3513"
            android:text="@string/game_btn1" />

        <Button
            android:id="@+id/game_btn2"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="#deae2a"
            android:text="@string/game_btn2" />

        <Button
            android:id="@+id/game_btn3"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="#1a59c7"
            android:text="@string/game_btn3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/game_btn_line2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_btn_line1">

        <Button
            android:id="@+id/game_btn4"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="#25a89d"
            android:text="@string/game_btn4" />

        <Button
            android:id="@+id/game_btn5"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="#57a825"
            android:text="@string/game_btn5" />

        <Button
            android:id="@+id/game_btn6"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="#ba147d"
            android:text="@string/game_btn6" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>